[gd_scene load_steps=3 format=3 uid="uid://ml4x8t2im8y7"]

[ext_resource type="Texture2D" uid="uid://brm3wvfcgsuyg" path="res://assets/ui/インフォ.png" id="1_bg"]
[ext_resource type="Script" uid="uid://ch6cv55e0krgs" path="res://scripts/ui_components/item_info_panel_ui.gd" id="2_script"]

[node name="ItemInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_script")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 149.0
offset_right = 937.0
offset_bottom = 549.0
theme_override_constants/separation = 30
alignment = 1

[node name="LeftPanel" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 4

[node name="RightPanel" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="ParchmentBg" type="TextureRect" parent="MainContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -491.0
offset_top = -654.0
offset_right = 936.0
offset_bottom = 1190.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bg")
expand_mode = 1
stretch_mode = 5

[node name="ContentMargin" type="MarginContainer" parent="MainContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.401
anchor_top = -0.219
anchor_right = 0.755
anchor_bottom = 1.065
offset_left = -18.6
offset_top = 168.6
offset_right = 750.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.2, 0.1, 1)
theme_override_font_sizes/font_size = 24
text = "アイテム名 [R]"

[node name="CostLabel" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.25, 0.15, 1)
theme_override_font_sizes/font_size = 18
text = "コスト: 100G"

[node name="ItemTypeLabel" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "武器"

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2

[node name="StatContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2

[node name="StatHeader" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer/StatContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "【ステータス】"

[node name="StatLabel" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer/StatContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.25, 0.15, 1)
theme_override_font_sizes/font_size = 14
text = "AP+30"
autowrap_mode = 2

[node name="EffectContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer"]
layout_mode = 2

[node name="EffectHeader" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer/EffectContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "【効果】"

[node name="EffectLabel" type="Label" parent="MainContainer/RightPanel/ContentMargin/VBoxContainer/EffectContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.25, 0.15, 1)
theme_override_font_sizes/font_size = 14
text = "アイテムの効果テキスト"
autowrap_mode = 2
